# jobzilla-ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd-backend.yml  cd-frontend.yml  ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: daily_headhunter_dag.py  job_scraping_dag.py  weekly_trends_dag.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/agents/: graph.py  roadmap_agent.py  state.py
backend/app/agents/edges/: __init__.py  should_redebate.py
backend/app/agents/nodes/: coach.py  cover_writer.py  improvement.py  judge.py  profile_parser.py  recruiter.py  skill_gap.py
backend/app/agents/prompts/: coach_prompt.py  judge_prompt.py  recruiter_prompt.py  writer_prompt.py
backend/app/api/routes/: analytics.py  cover_letter.py  debate.py  headhunter.py  health.py  match.py  profile.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/models/: __init__.py  agent.py  analytics.py  job.py  resume.py  user.py
backend/app/services/: embedding.py  pinecone_service.py  resume_parser.py  s3_storage.py
backend/scripts/: init_db.py
docker/: init-db.sh
frontend/: Dockerfile  app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  debate_viewer.py  job_card.py  score_gauge.py
frontend/utils/: api_client.py
mcp_servers/github-context/: Dockerfile  requirements.txt  server.py
mcp_servers/job-market/: Dockerfile  requirements.txt  server.py
scripts/: export_db.sh  import_db.sh  vectorize_jobs.py
