[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobzilla"
version = "0.1.0"
description = "Jobzilla - AI-powered job matching platform with multi-agent debates"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jobzilla Team" }
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # FastAPI Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    
    # LangChain + LangGraph
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    
    # MCP (Model Context Protocol)
    "mcp>=0.9.0",
    
    # Vector Database
    "pinecone-client>=3.0.0",
    "openai>=1.10.0",
    
    # Resume Parsing
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    
    # Web Scraping
    "selenium>=4.17.0",
    "beautifulsoup4>=4.12.0",
    "webdriver-manager>=4.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Caching
    "redis>=5.0.0",
    
    # Utilities
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",  # For testing
]

frontend = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
]

airflow = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-http>=4.8.0",
    "apache-airflow-providers-slack>=8.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["backend", "mcp_servers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "mcp_servers"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
